package ucf.assignments;

import javafx.event.ActionEvent;

public class LoadSingleListController {

        //FXML CONTTENT
        /*
            TEXT FIELDS
                ListNameInputTextField
                ListLocationInputTextField
            Buttons
                BrowseButton
                LoadListButton

         */

    //String userPath;

    public void BrowseLoadSingleList(ActionEvent actionEvent) {
        //will open native machine file explorere and allow user to select a file
        //will save this path in userpath var
    }

    public void ListNameInputted(ActionEvent actionEvent) {

    }

    public void LoadSingleListButtonClicked(ActionEvent actionEvent) {
        //grab list name from ListName Text Field
        //generate LoadFile Object from Data

    }
}
